# wishlist

./: .flake8  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-qa.yml  pr.yml
scripts/: entrypoint.sh
webpages/: index.html  index_new.html  stylesregistration.css  two_headers.html
wishlist/: conftest.py  manage.py
wishlist/general/models/: __init__.py  random_identifier.py  timestamped.py
wishlist/project/: urls.py  wsgi.py
wishlist/project/settings/: __init__.py  authentication.py  base.py  custom.py  docker.py  envvars.py  logging.py
wishlist/project/settings/templates/: settings.dev.py  settings.github.py
wishlist/static/css/: styles.css  stylesbrones.css  stylesfriends.css  stylespages.css  stylesregistration.css
wishlist/static/js/: script.js
wishlist/templates/: base.html
wishlist/templates/account/: login.html  signup.html
wishlist/templates/partials/: header.html
wishlist/users/: admin.py  apps.py
wishlist/users/forms/: __init__.py  signup.py
wishlist/users/managers/: __init__.py
wishlist/users/migrations/: 0001_initial.py  0002_user_date_of_birth_alter_user_identifier_and_more.py
wishlist/users/models/: user.py
wishlist/users/tests/: test_create_user.py
wishlist/users/tests/fixtures/: __init__.py  users.py
wishlist/wishes/: apps.py
wishlist/wishes/migrations/: 0001_initial.py
wishlist/wishes/models/: __init__.py  wish.py  wishlist.py
