[tool.poetry]
name = "wishlist"
version = "0.1.0"
description = ""
authors = ["Evgenii Gusev <ged1994@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
django-split-settings = "^1.2.0"
django-storages = "^1.14.2"
boto3 = "^1.33.12"
djangorestframework = "^3.14.0"
pillow = "^10.1.0"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
colorlog = "^6.8.0"
pre-commit = "^3.6.0"
pytest = "^7.4.3"
pytest-xdist = "^3.5.0"
pytest-django = "^4.7.0"
model-bakery = "^1.17.0"

[tool.isort]
line_length = 119
multi_line_output = 5

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "wishlist.project.settings"
django_find_project = false
python_files = "test_*.py"
testpaths = ["wishlist"]
filterwarnings = "ignore::DeprecationWarning:^(?!node\\.).*:"

[tool.yapf]
align_closing_bracket_with_visual_indent = true
based_on_style = "google"
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
